--- a/.github/workflows/inert.yml
+++ b/.github/workflows/inert.yml
@@ -34,4 +34,5 @@ jobs:
       - name: 'Commit & Push'
         uses: actions-js/push@master
         with:
+          branch: 'main'
           github_token: ${{ secrets.GITHUB_TOKEN }}
