--- a/.github/workflows/inert.yml
+++ b/.github/workflows/inert.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '14'
       
       - name: 'Install the CLI'
-        run: 'npm install -g inert-cli'
+        run: 'npm install -g inert-ssg'
         
       - name: 'Build Site'
         run: 'inert build'
